--- a/tutorial/configs/chained_pitch_stretch.toml
+++ b/tutorial/configs/chained_pitch_stretch.toml
@@ -1,7 +1,7 @@
 [main]
 
 # output root folder
-outPath = "tutorial/output"
+outPath = "output"
 
 # number of output files to generate (for random modifications)
 numFiles = 10
@@ -11,6 +11,10 @@ chain = true
 
 # transformations to apply `transf = ["pitch"]`
 transf = ["pitch", "gain"]
+
+# generate experiment folder with name based on current time
+generateExpFolder = true
+
 
 
 [analysis]
