--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,4 +39,4 @@ jobs:
       - run: pip install mkdocs-git-revision-date-localized-plugin 
       - run: pip install mkdocs-encryptcontent-plugin
 
-      - run: mkdocs gh-deploy --force
+      - run: cd docs && mkdocs gh-deploy --force
