--- a/.github/workflows/version_update.yml
+++ b/.github/workflows/version_update.yml
@@ -3,6 +3,7 @@ name: publish version of 🎶 cleese 🧠 update to PyPI 🐍
 on:
   release:
     types: [published]
+  workflow_dispatch:
 
 jobs:
   build:
