--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = cleese_stim
-version = attr: cleese_stim.__version__
+version = "2.1.0"
 description = Audio and visual stimuli generation tool
 long_description = file: README.md
 long_description_content_type = text/markdown
