--- a/.github/workflows/version_update.yml
+++ b/.github/workflows/version_update.yml
@@ -9,6 +9,9 @@ jobs:
   build:
     name: Build distribution 📦
     runs-on: ubuntu-latest
+    environment: release
+    permissions:
+      id-token: write
 
     steps:
     - uses: actions/checkout@v4
