--- a/.github/workflows/version_update.yml
+++ b/.github/workflows/version_update.yml
@@ -49,7 +49,7 @@ jobs:
     - name: Download all the dists
       uses: actions/download-artifact@v4
       with:
-        name: python-package-distributions
+        name: cleese_stim-${{ github.event.release.tag_name }}
         path: dist/
     - name: Publish distribution 📦 to PyPI
       uses: pypa/gh-action-pypi-publish@release/v1
