--- a/.github/workflows/version_update.yml
+++ b/.github/workflows/version_update.yml
@@ -12,6 +12,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+    - name: Fetch all history for all tags and branches
+      run: git fetch --prune --unshallow
     - name: Set up Python
       uses: actions/setup-python@v5
       with:
@@ -51,5 +53,7 @@ jobs:
       with:
         name: cleese_stim-${{ github.event.release.tag_name }}
         path: dist/
+    - name: Fetch all history for all tags and branches
+      run: git fetch --prune --unshallow
     - name: Publish distribution 📦 to PyPI
       uses: pypa/gh-action-pypi-publish@release/v1
