--- a/.github/workflows/version_update.yml
+++ b/.github/workflows/version_update.yml
@@ -34,6 +34,11 @@ jobs:
     - name: Build a binary wheel and a source tarball
       run: >-
         python3 setup.py sdist bdist_wheel
+    - name: Store the distribution packages
+      uses: actions/upload-artifact@v4
+      with:
+        name: python-package-distributions
+        path: dist/
 
   publish-to-pypi:
     name: >-
@@ -51,6 +56,7 @@ jobs:
     - name: Download all the dists
       uses: actions/download-artifact@v4
       with:
+        name: python-package-distributions
         path: dist/
     - name: Publish distribution 📦 to PyPI
       uses: pypa/gh-action-pypi-publish@release/v1
