--- a/.github/workflows/version_update.yml
+++ b/.github/workflows/version_update.yml
@@ -32,8 +32,7 @@ jobs:
         pip install
         wheel==0.34.2
     - name: Build a binary wheel and a source tarball
-      run: >-
-        python3 setup.py sdist bdist_wheel
+      run: python3 -m build
     - name: Store the distribution packages
       uses: actions/upload-artifact@v4
       with:
