--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,3 @@
 [build-system]
-requires = ["setuptools>=40.6.0", "wheel", "setuptools_scm[toml]>=6.2"]
+requires = ["setuptools>=40.6.0", "wheel"]
 build-backend = "setuptools.build_meta"
-
-[tool.setuptools_scm]
