added param_ext in tutorial config files

--- a/docs/docs/tutorials/configs/random_pitch_profile.toml
+++ b/docs/docs/tutorials/configs/random_pitch_profile.toml
@@ -16,7 +16,7 @@ transf = ["pitch"]
 generateExpFolder = true
 
 # bpf file extension (default: '.txt')
-bpf_ext = '.txt'
+param_ext = '.txt'
 
 [analysis]
 
