--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,6 @@
 [build-system]
-requires = ["setuptools>=40.6.0", "wheel", "setuptools_scm[toml]>=6.2"]
+requires = ["setuptools>=40.6.0", "wheel", "setuptools-git-versioning"]
 build-backend = "setuptools.build_meta"
 
-[tool.setuptools_scm]
-
-[project]
-version = "2.3.2"
+[tool.setuptools-git-versioning]
+enabled = true
