--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,5 @@
 [build-system]
-requires = ["setuptools>=40.6.0", "wheel", "setuptools-git-versioning>=2.0,<3",]
+requires = ["setuptools>=40.6.0", "wheel", "setuptools_scm>=8",]
 build-backend = "setuptools.build_meta"
 
-[tool.setuptools-git-versioning]
-enabled = true
+[tool.setuptools_scm]
