--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,3 +3,5 @@ requires = ["setuptools>=40.6.0", "wheel", "setuptools_scm>=8",]
 build-backend = "setuptools.build_meta"
 
 [tool.setuptools_scm]
+local_scheme = 'no-local-version'
+version_scheme = 'only-version'
