--- a/docs/docs/tutorials/configs/random_pitch_profile.toml
+++ b/docs/docs/tutorials/configs/random_pitch_profile.toml
@@ -45,7 +45,7 @@ trunc = 1
 # type of breakpoint function:
 #      'ramp': linear interpolation between breakpoints
 #      'square': square BPF, with specified transition times at edges
-BPFtype = 'ramp'
+BPFtype = 'square'
 
 # in s: transition time for square BPF
 trTime = 0.02
